[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/rsa",
  "contracts/p256",
  "contracts/k256_schnorr",
  "contracts/k256_ecdsa",
  "contracts/ed25519",
  "tests",
]

[profile.release]
overflow-checks = true
strip = false
codegen-units = 1
debug = true
