[package]
name = "ed25519"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = "0.17.0"
curve25519-dalek = { version = "4.1.2", default-features = false, features = ["digest"] }
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["digest"] }
sha2 = { version = "0.10", default-features = false }
